--- a/style.css
+++ b/style.css
@@ -37,23 +37,54 @@ transition-property: width;
     flex-direction: column;
     background: transparent;    
     justify-content: space-between;
-    width: 25%;
+    align-items: flex-start;
+    width: 50vh;
     height:70px;
-    top: 90vh;
-    left:73vw;
+    top: 91vh;
+    left:74vw;
 }
 .rgbSlider{
-    width: 80%;
+    width: 100%;
 }
 .test{
+   width: 100%;
    display: flex; 
+   flex-direction: row;
    justify-content: space-between;
 }
 label{
     font-size: 16px;
     font-weight: bold;
 }
-@media (max-width :800px){
+#red{   
+    -webkit-appearance: none;
+    background: linear-gradient(to right, #000000 0%, #ff0000 100%);
+    outline :none;
+    border-radius: 20px;
+}
+#green{   
+    -webkit-appearance: none;
+    background: linear-gradient(to right, #000000 0%, #00ff00 100%);
+    outline :none;
+    border-radius: 20px;
+}
+#blue{   
+    -webkit-appearance: none;
+    background: linear-gradient(to right, #000000 0%, #0000ff 100%);
+    outline :none;
+    border-radius: 20px;
+}
+#red::-webkit-slider-thumb , #green::-webkit-slider-thumb,#blue::-webkit-slider-thumb{   
+    width: 5px;
+    -webkit-appearance: none;
+    height: 15px;
+    cursor: ew-resize;
+    background: black;
+    background-color: transparent;
+    outline-style: auto;
+}
+
+@media (max-width :1200px) , (max-height :900px){
     #output{
         font-size: 0.8rem; 
         width: 35vw;
@@ -61,5 +92,12 @@ label{
     #output:hover{  
         cursor: pointer;
         width: 35%;   
+    }
+    #rgb{
+        width:80vw;
+        
+        top: 85%;
+        left:10vw;
+        
     }
 }
